# aocl-crypto

./: .clangd  .gitignore  BUILD.md  BUILD_Windows.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICES  README.md
bench/: README.md
bench/cipher/: CMakeLists.txt  bench_cipher.cc  bench_varlen_multibuffer.cc
bench/cipher_experimental/: CMakeLists.txt  bench_cipher_experimental.cc
bench/cmac/: bench_cmac.cc
bench/digest/: bench_digest.cc
bench/ecdh/: bench_ecdh.cc
bench/hmac/: bench_hmac.cc
bench/poly1305/: bench_poly1305.cc
bench/rsa/: bench_rsa.cc
cmake/: AlcpConfig.cmake  AlcpExamples.cmake  AlcpFuzzTests.cmake  AlcpTestUtils.cmake  AlcpTests.cmake  Benchmarks.cmake  CompilerLinux.cmake  CompilerWin.cmake  IntegrationTests.cmake
cmake/Presets/: Default.json  Provider.json
cmake/modules/: AoclUtils.cmake
docs/: ReleaseNotes.txt  cpu_feature_kernel_map.md
docs/compat/: ipp.md
docs/integration-guide/: alcp_getting_started.md
docs/internal/: design.md
docs/resources/: Combine_build.md  Main_Page.md  Quick_Start.md
examples/: Makefile
examples/cipher/: CMakeLists.txt  aes-cbc-multibuffer.c  aes-ccm.c  aes-cfb.c  aes-cfb.cc  aes-gcm.c  aes-gcm.cc  aes-multibuffer.c  aes-siv.c  aes-speed-cipher.c  aes-speed-gcm.c  aes-xts.c  chacha20-poly1305.c  chacha20.c
examples/digest/: CMakeLists.txt  sha2_224_multibuffer.c  sha2_256_multibuffer.c
examples/ecdh/: CMakeLists.txt
examples/mac/: CMakeLists.txt  hmac_multibuffer.c
examples/misc/: CMakeLists.txt  cpuid.cc  filecrypt.cc
examples/rng/: CMakeLists.txt  drbg-test.c
examples/rsa/: CMakeLists.txt
examples/version/: CMakeLists.txt
include/alcp/: cipher.h  cipher_aead.h  cipher_segment.h  digest.h  ec.h  ecdh.h  error.h  key.h  mac.h  rng.h  rsa.h  types.h
lib/: CMakeLists.txt
lib/arch/: CMakeLists.txt
lib/arch/zen4/: CMakeLists.txt  avx512.hh  chacha20.cc  poly1305.cc  sha256_mb_avx512.cc  sha2_512_avx512.cc  sha2_mb_avx512.hh  sha3_zen4.cc  vaes_avx512_core.hh  vaes_cbc_decrypt.cc  vaes_cbc_encrypt.cc  vaes_cfb_decrypt.cc  vaes_cfb_encrypt.cc  vaes_ctr.cc  vaes_key_compare.cc  vaes_xts.cc
lib/arch/zen4/gcm/: CMakeLists.txt  avx512_gmul.hh  vaes_gcm.hh  vaes_gcm_decrypt.cc  vaes_gcm_encrypt.cc
lib/capi/: c_cipher.cc  c_cipher_aead.cc  c_cipher_segment.cc  c_digest.cc  c_drbg.cc  c_ec.cc  c_mac.cc  c_rng.cc  c_rsa.cc
lib/cipher/: CMakeLists.txt  aes.cc  aes_ccm.cc  aes_cmac_siv.cc  aes_ctr.cc  aes_gcm.cc  aes_generic.cc  aes_xts.cc  chacha20.cc  chacha20_inplace.cc.inc  chacha20_poly1305.cc  cipher.cc  rijndael.cc
lib/digest/: builder.cc  sha256.cc  sha256_mb.cc  sha3.cc  sha3_inplace.cc.inc  sha512.cc
lib/ec/: ecdh_x25519.cc
lib/impl/: bignum_alcp.cc
lib/mac/: builder.cc  cmac.cc  hmac_mb.cc  poly1305.cc
lib/rng/: CMakeLists.txt  drbg.cc  drbg_ctr.cc  drbg_hmac.cc  system_rng.cc
lib/rsa/: builder.cc  rsa.cc  rsa.cc.inc
lib/tests/: CMakeLists.txt  dispatch_test.cc
lib/utils/: bignum.cc  cpuid.cc  memory.cc
scripts/: Clone_Build.sh
scripts/python/: run_fuzz_tests.py
sphinx/: conf.py  group__cipher.rst  group__digest.rst  group__ec.rst  group__error.rst  group__mac.rst  group__rng.rst  group__rsa.rst  index.rst
tests/: CMakeLists.txt  README.md
tests/cipher/: CMakeLists.txt  test_cbc_cross.cc  test_cbc_kat.cc  test_ccm_cross.cc  test_ccm_kat.cc  test_cfb_cross.cc  test_cfb_kat.cc  test_chacha20-poly1305_cross.cc  test_chacha20-poly1305_kat.cc  test_chacha20_cross.cc  test_chacha20_kat.cc  test_ctr_cross.cc  test_ctr_kat.cc  test_gcm_cross.cc  test_gcm_kat.cc  test_multibuffer.cc  test_multibuffer_cross.cc  test_multibuffer_variable_length.cc  test_ofb_cross.cc  test_ofb_kat.cc  test_siv_cross.cc  test_siv_kat.cc  test_xts_cross.cc  test_xts_kat.cc
tests/cipher_experimental/: test_gcm_cross.cc  test_gcm_kat.cc  test_xts_cross.cc  test_xts_kat.cc
tests/cmac/: CMakeLists.txt  test_cmac_cross.cc  test_cmac_kat.cc
tests/digest/: CMakeLists.txt  test_digest_cross.cc  test_digest_kat.cc
(+203 files in other folders)
